# cc-to-uc-transfer-pipelines

./: .gitignore  README.md  dev.ipynb  normalize_datamart_files.ipynb  pyproject.toml  samples.ipynb
src/ucd_sta_221_project/api/: __init__.py  college_scorecard.py  utils.py
src/ucd_sta_221_project/scripts/: __init__.py  college_scorecard.py
ucd_sta_221_project/api/: __init__.py  cccco.py  college_scorecard.py  compute_cc_uc_routes.py
ucd_sta_221_project/data_files/: Data Dictionary - STA221.csv  StudentCitizenshipStatus.csv  StudentFinAidSumm.csv  TransferVelocity.csv  cc_eops.csv  cc_scorecard.csv  cc_uc_drive_distances.csv  datamart_engl_success_retention_150100.csv  datamart_engl_success_retention_150100_normalized.csv  datamart_math_success_retention_170100.csv  datamart_math_success_retention_170100_normalized.csv  uc2cc_major.csv  uc_scorecard.csv
ucd_sta_221_project/data_files/cc_eops/: EOPSSumm2012.csv  EOPSSumm2013.csv  EOPSSumm2014.csv  EOPSSumm2015.csv  EOPSSumm2016.csv  EOPSSumm2017.csv  EOPSSumm2018.csv  EOPSSumm2019.csv  EOPSSumm2020.csv  EOPSSumm2021.csv  EOPSSumm2022.csv  EOPSSumm2023.csv  clean_eops.ipynb
ucd_sta_221_project/ml/: Q1.ipynb
ucd_sta_221_project/ml/q1_admission_rate/: Q1_Classification.ipynb  Q1_Regress.ipynb  param_results_sorted.csv
ucd_sta_221_project/ml/q2_enrollment_melt/: Model.ipynb  dataprocess.ipynb
ucd_sta_221_project/ml/q2_persistence_after_transfer/: deleteme.csv  q2_normalize_datamart_files.ipynb  q2_persistence_after_transfer.ipynb  q2_unique_cc_ids.py  schools_years_with_no_scorecard_data.csv
(+40 files in other folders)
